--- a/css/main.css
+++ b/css/main.css
@@ -111,9 +111,14 @@ h3 {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
 }
+
 p {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
+}
+
+form {
+    font-family: 'Lato', sans-serif;
 }
 
 .ultra-bold {
@@ -190,11 +195,11 @@ div#ios_header > img#another_widget {
 }
 
 div#page {
+    height: 100%;
     padding: 0 1em;
     position: relative;
     margin-top: 5em;
 }
-
 
 
 
